MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/ADHA_Unit__c.object-meta.xml
<CustomObject>
    <description>ADHA Baniyas villa inventory for the public microsite. Standalone - no relationship to Unit__c, Phase__c or Project__c.</description>
    <label>ADHA Unit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ADHA Units</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>