MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Active_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Active_Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The live reservation holding this unit. Null when the unit is free.</description>
    <label>Active Reservation</label>
    <referenceTo>ADHA_Reservation__c</referenceTo>
    <relationshipLabel>Held Units</relationshipLabel>
    <relationshipName>Held_Units</relationshipName>
    <type>Lookup</type>
</CustomField>