MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Balconies_Count__c.field-meta.xml
<CustomField>
    <fullName>Balconies_Count__c</fullName>
    <description>1 or 3.</description>
    <label>Balconies</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>