MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Bathrooms_Count__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms_Count__c</fullName>
    <description>9 or 10.</description>
    <label>Bathrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>