MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <description>Full category code from the source file.</description>
    <label>Category Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1M</fullName>
            </value>
            <value>
                <fullName>A1T</fullName>
            </value>
            <value>
                <fullName>A2M</fullName>
            </value>
            <value>
                <fullName>A2T</fullName>
            </value>
            <value>
                <fullName>B1M</fullName>
            </value>
            <value>
                <fullName>B1T</fullName>
            </value>
            <value>
                <fullName>B2M</fullName>
            </value>
            <value>
                <fullName>B2T</fullName>
            </value>
            <value>
                <fullName>C1M</fullName>
            </value>
            <value>
                <fullName>C1T</fullName>
            </value>
            <value>
                <fullName>C2M</fullName>
            </value>
            <value>
                <fullName>C2T</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>