MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Centroid_X__c.field-meta.xml
<CustomField>
    <fullName>Centroid_X__c</fullName>
    <description>Normalised 0-1, for label placement.</description>
    <label>Centroid X</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>