MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Centroid_Y__c.field-meta.xml
<CustomField>
    <fullName>Centroid_Y__c</fullName>
    <description>Normalised 0-1, for label placement.</description>
    <label>Centroid Y</label>
    <precision>9</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>