MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <description>Source COMMUNITY. Sizes: Wb3_01 748, Wb4_03 423, Wb2_01 293, Wb4_02 195.</description>
    <label>Community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wb2_01</fullName>
            </value>
            <value>
                <fullName>Wb3_01</fullName>
            </value>
            <value>
                <fullName>Wb4_02</fullName>
            </value>
            <value>
                <fullName>Wb4_03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>