MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Eligible_Service__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Service__c</fullName>
    <description>Matched against the applicant&apos;s service type. House Purchase Loan 1505, House Grant 154.</description>
    <label>Eligible Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>House Purchase Loan</fullName>
            </value>
            <value>
                <fullName>House Grant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>