MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Expose_To__c.field-meta.xml
<CustomField>
    <fullName>Expose_To__c</fullName>
    <description>Source availability signal. Only Public units are customer-visible: Public 1355, Reserved 300, MV-Reserved 4.</description>
    <label>Expose To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>MV-Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>