MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/GIS_ID__c.field-meta.xml
<CustomField>
    <fullName>GIS_ID__c</fullName>
    <description>Source GISID.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GIS ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>