MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/GIS_Remarks__c.field-meta.xml
<CustomField>
    <fullName>GIS_Remarks__c</fullName>
    <description>Source GIS_REMARKS.</description>
    <label>Stock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Public Stock</fullName>
            </value>
            <value>
                <fullName>PC Stock</fullName>
            </value>
            <value>
                <fullName>Executive Stock</fullName>
            </value>
            <value>
                <fullName>Mockup villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>