MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/House_Size__c.field-meta.xml
<CustomField>
    <fullName>House_Size__c</fullName>
    <description>Source HOUSE_SIZE - 480, 520 or 580.</description>
    <label>Built-up Area</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>