MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Is_Selectable__c.field-meta.xml
<CustomField>
    <fullName>Is_Selectable__c</fullName>
    <description>A unit is bookable only when publicly exposed and still available.</description>
    <formula>AND( ISPICKVAL(Expose_To__c, &apos;Public&apos;), ISPICKVAL(Status__c, &apos;Available&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Selectable</label>
    <type>Checkbox</type>
</CustomField>