MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>WGS84 latitude from the ADHA units export. See Longitude__c.</description>
    <label>Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>