MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>WGS84 longitude from the ADHA units export. With Latitude__c this georeferences every plot, which is what lets the overlay be aligned to any base image analytically rather than by eye.</description>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>