MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Mapping_Status__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Status__c</fullName>
    <description>Provisional until ADHA supplies the masterplan-number column. Go-live requires Confirmed for all units.</description>
    <label>Mapping Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Unmapped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>