MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Masterplan_Classification__c.field-meta.xml
<CustomField>
    <fullName>Masterplan_Classification__c</fullName>
    <description>Basic 1561, Advanced 98.</description>
    <label>Masterplan Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>