MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Masterplan_Features__c.field-meta.xml
<CustomField>
    <fullName>Masterplan_Features__c</fullName>
    <description>Position of the plot within its row.</description>
    <label>Masterplan Features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Double row middle</fullName>
            </value>
            <value>
                <fullName>Double row community</fullName>
            </value>
            <value>
                <fullName>Double row corner</fullName>
            </value>
            <value>
                <fullName>Internal single row middle</fullName>
            </value>
            <value>
                <fullName>Internal single row community</fullName>
            </value>
            <value>
                <fullName>Internal single row corner</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>