MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Masterplan_Number__c.field-meta.xml
<CustomField>
    <fullName>Masterplan_Number__c</fullName>
    <description>The 1-1659 number printed on the masterplan. Provisional until ADHA confirms the mapping to Plot UID.</description>
    <label>Masterplan Number</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>