MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Pinned_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Pinned_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The one applicant who may book this villa. Set from the back end; for them every other unit reads ineligible, for everyone else this unit reads taken. A pin RESTRICTS, it never frees: Is_Selectable__c still gates the pinned applicant too. Never serialized into any DTO and never granted to the guest permission set - the assignee must not reach a customer&apos;s browser. Cleared by the sweeper when the applicant expires.</description>
    <label>Pinned Applicant</label>
    <referenceTo>ADHA_Applicant__c</referenceTo>
    <relationshipLabel>Pinned Units</relationshipLabel>
    <relationshipName>Pinned_Units</relationshipName>
    <type>Lookup</type>
</CustomField>