MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Pinned_On__c.field-meta.xml
<CustomField>
    <fullName>Pinned_On__c</fullName>
    <description>When the current pin was placed. Stamped by ADHA_PinController.pin, cleared by unpin and by the sweeper with the pin itself. Null on a pin written outside those paths.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Pinned On</label>
    <type>DateTime</type>
</CustomField>