MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Plot_ID__c.field-meta.xml
<CustomField>
    <fullName>Plot_ID__c</fullName>
    <description>Source PLOTID.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GIS Plot ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>