MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Plot_UID__c.field-meta.xml
<CustomField>
    <fullName>Plot_UID__c</fullName>
    <description>Authoritative key from the ADHA units file, e.g. WB4_03-405. Always Community-PlotNumber.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Plot UID</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>