MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Rooms_Count__c.field-meta.xml
<CustomField>
    <fullName>Rooms_Count__c</fullName>
    <description>5 or 6.</description>
    <label>Bedrooms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>