MODON MRE BPDEV/force-app/main/default/objects/ADHA_Unit__c/fields/Villa_Type__c.field-meta.xml
<CustomField>
    <fullName>Villa_Type__c</fullName>
    <description>Modern 835, Heritage 824.</description>
    <label>Villa Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modern</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>